fixing image width on mobile

--- a/styles.css
+++ b/styles.css
@@ -277,4 +277,7 @@ img{
     justify-content: space-around;
     align-items: center;
   }
+  img {
+    width: 80%;
+  }
 }
